<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Doctor Vera SMS</string>
    <string name="tab1_header">Archive</string>
    <string name="tab2_header">New SMS</string>
    <string name="tab3_header">Templates</string>
    <!-->New SMS texts<-->
    <string name="phone_number_label_text">Phone number:</string>
    <string name="sms_text_label_text">SMS text:</string>
    <string name="send_sms_button_text">Send</string>
    <string name="save_sms_button_text">Save</string>
    <string name="sent_notify">Successfully sent!</string>
    <string name="saved_notify">SMS Saved!</string>
    <!-->Settings<-->
    <string name="settings_activity_name">Settings</string>
    <string name="login_label_text">Login</string>
    <string name="password_label_text">Password</string>
    <string name="alpha_name_label_text">Alpha Name</string>
    <string name="language_label_text">Language</string>
    <string name="save_settings_button_text">Apply</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="settings_saved_notice">Settings applied!</string>
    <!-->Menu Items<-->
    <string name="action_settings">Settings</string>
    <string name="clear_all">Delete All</string>
    <string name="quit">Exit</string>
    <string name="delete_checked">Delete checked</string>
    <!-->Errors!<-->
    <string name="field_empty_error">Required!</string>
    <string name="phone_number_format_error">Phone number error!</string>
    <string name="internet_connection_error">Internet connection error!</string>
    <string name="login_password_error">Authentification failed!</string>
    <string name="license_error">License is not active, check Settings, or contact Developers!</string>
    <!-->Delete SMS Dialog!<-->
    <string name="delete_sms_header">Delete SMS!</string>
    <string name="delete_sms_text">Do you want to delete:</string>
    <string name="delete_sms_text_end">SMS</string>
    <string name="delete_sms_yes">Yes</string>
    <string name="delete_sms_no">No</string>
    
    <!-- Licensing -->
    <!-- License checking status messages -->
    <string name="google_not_valid">Google Market License is NOT Valid</string>
    <string name="google_valid">Google Market License is active</string>
    <string name="drvera_valid">Doctor Vera License is NOT Valid</string>
    <string name="drvera_not_valid">Doctor Vera License is active</string>
    
    <string name="application_error">Application error: %1$s</string>

    <!-- Unlicensed dialog messages -->
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
    <string name="unlicensed_dialog_retry_body">Unable to validate license. Check to see if a network connection is available.</string>
    <string name="buy_button">Buy app</string>
    <string name="retry_button">Retry</string>
    <string name="quit_button">Exit</string>

</resources>
